<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.transapp.shipper.ActivityLogin"
    android:background="@color/app_background_gray"
    android:gravity="center_horizontal">

    <com.transapp.shipper.widgets.TypeFacedTextView
        android:id="@+id/txtSplashTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/splashTitleTextSize"
        android:text="@string/splashTitle"
        android:textStyle="bold"
        android:textColor="@color/app_dark_gray"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
       />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@color/white"
        android:hint="@string/lblLoginEmail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/labelsGray"
        android:textColorHint="@color/labelsHint"
        android:layout_below="@+id/txtSplashTitle"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:hint="@string/lblPassword"
        android:inputType="textPassword"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/labelsGray"
        android:textColorHint="@color/labelsHint"
        android:layout_below="@id/email"
        />

    <!-- Login Button -->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/app_dark_gray"
        android:text="@string/btnLoginLabel"
        android:textColor="@color/white"
        android:layout_below="@id/password"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>

    <RelativeLayout
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_dark_gray"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerInParent="true"/>

        <com.transapp.shipper.widgets.TypeFacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="14sp"
            android:textColor="@color/app_dark_gray"
            android:layout_centerInParent="true"
            android:background="@color/app_background_gray"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/app_dark_gray"
        android:text="@string/btnSignUpLabel"
        android:textColor="@color/white"
        android:layout_below="@id/separator"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>

</RelativeLayout>
