<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_gray"
    tools:context="com.transapp.shipper.ActivityRegister">

    <include
        android:id="@+id/toolbarHeader"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp">

        <com.transapp.shipper.widgets.TypeFacedTextView
            android:id="@+id/lblFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFirstName"
            android:textColor="@color/labelsGray"
            android:textSize="@dimen/register_lables_text_size"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:inputType="text"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/labelsGray"
            android:textColorHint="@color/labelsHint"
            />

        <com.transapp.shipper.widgets.TypeFacedTextView
            android:id="@+id/lblLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLastName"
            android:textColor="@color/labelsGray"
            android:textSize="@dimen/register_lables_text_size"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/txtLasName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:inputType="text"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/labelsGray"
            android:textColorHint="@color/labelsHint"
            />

        <com.transapp.shipper.widgets.TypeFacedTextView
            android:id="@+id/lblCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCompanyName"
            android:textColor="@color/labelsGray"
            android:textSize="@dimen/register_lables_text_size"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/txtCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:inputType="text"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/labelsGray"
            android:textColorHint="@color/labelsHint"
            />

        <com.transapp.shipper.widgets.TypeFacedTextView
            android:id="@+id/lblPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPhone"
            android:textColor="@color/labelsGray"
            android:textSize="@dimen/register_lables_text_size"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:inputType="phone"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/labelsGray"
            android:textColorHint="@color/labelsHint"
            />

        <com.transapp.shipper.widgets.TypeFacedTextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail"
            android:textColor="@color/labelsGray"
            android:textSize="@dimen/register_lables_text_size"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/labelsGray"
            android:textColorHint="@color/labelsHint"
            />

        <com.transapp.shipper.widgets.TypeFacedTextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            android:textColor="@color/labelsGray"
            android:textSize="@dimen/register_lables_text_size"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/labelsGray"
            android:textColorHint="@color/labelsHint"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@color/app_dark_gray"
            android:text="@string/btnSignUpLabel"
            android:textColor="@color/white"
            android:layout_below="@id/separator"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>
    </ScrollView>


</RelativeLayout>
